--- a/slides/NLP-transformer.tex
+++ b/slides/NLP-transformer.tex
@@ -1009,15 +1009,18 @@ The traditional attention mechanism largely solved the first dependency by givin
 \begin{frame}{The Decoder}
 \begin{scriptsize}
 \begin{itemize}
+\item The Transformer decoder consists of two types of attention layers: self-attention and encoder-decoder attention.
 
-\item The Transformer decoder utilizes the output of the top encoder to generate attention vectors K and V. 
-\item These attention vectors are then employed by each decoder in its ``encoder-decoder attention'' layer to enable the decoder to focus on relevant sections in the input sequence.
+\item Self-attention layers in the decoder allow each position in the decoder to pay attention to all positions within the decoder itself, similar to how the hidden state in RNN machine translation architectures works.
 
-\item By doing so, every position in the decoder is able to attend to all positions in the input sequence, replicating the typical encoder-decoder attention mechanisms found in sequence-to-sequence models. 
+\item On the other hand, the ``encoder-decoder attention'' layer enables the decoder to focus on relevant parts of the input sequence.
 
-\item Additionally, self-attention layers within the decoder allow each position to attend to all positions within the decoder, including itself, similar to the role played by the decoder hidden state in RNN machine translation architectures.
+\item The encoder-decoder attention layer functions similarly to multiheaded self-attention, but it generates its queries matrix from the layer below it, and uses the keys and values matrix from the output of the encoder stack.
 
-\item In summary, the ``Encoder-Decoder Attention`` layer works just like multiheaded self-attention, except it creates its Queries matrix from the layer below it, and takes the Keys and Values matrix from the output of the encoder stack.
+\item This allows each position in the decoder to attend to all positions in the input sequence, mimicking the typical encoder-decoder attention mechanisms seen in RNN sequence-to-sequence models.
+
+
+
 
 
  
@@ -1060,7 +1063,7 @@ The traditional attention mechanism largely solved the first dependency by givin
  \item This is done by masking the ``future'' tokens when decoding a certain word.
 
   \item The masking is done by setting to $- \infty$ all values in the input of the softmax which correspond to illegal connections.
- \item This is why ``multi-head attention blocks'' in the decoder are referred to as ``masked'': the inputs to the decoder from future time-steps are masked.
+ \item This is why ``self attention blocks'' in the decoder are referred to as ``masked'': the inputs to the decoder from future time-steps are masked.
  
  
 \end{itemize}
