--- a/slides/NLP-LLM.tex
+++ b/slides/NLP-LLM.tex
@@ -59,6 +59,41 @@
 
 
 
+\begin{frame}{Representations for a word}
+\begin{scriptsize}
+\begin{itemize}
+\item So far, we've basically had one representation of words, the word embeddings we've already learned:  Word2vec, GloVe, fastText.\footnote{These slides are based on the Stanford CS224N: Natural Language Processing with Deep Learning course: \url{http://web.stanford.edu/class/cs224n/}}.
+\item These embeddings have a useful semi-supervised quality, as they can be learned from unlabeled corpora and used in our downstream task-oriented architectures (LSTM, CNN, Transformer).
+
+\item However, they exhibit two problems.
+\item  Problem 1: They always produce the same representation for a word type regardless of the context in which a word token occurs
+\item  We might want very fine-grained word sense disambiguation
+\item Problem 2: We just have one representation for a word, but words have different aspects, including semantics, syntactic behavior, and register/connotations
+
+ 
+
+\end{itemize}
+\end{scriptsize}
+\end{frame}
+
+\begin{frame}{Neural Language Models can produce Contextualized Embeddings}
+\begin{scriptsize}
+\begin{itemize}
+\item So far, we've basically had one representation of words, the word embeddings we've already learned:  Word2vec, GloVe, fastText.\footnote{These slides are based on the Stanford CS224N: Natural Language Processing with Deep Learning course: \url{http://web.stanford.edu/class/cs224n/}}.
+\item These have two problems.
+\item Problem: Always the same representation for a word type regardless of the context in which a word token occurs
+\item  We might want very fine-grained word sense disambiguation
+\item Problem 2: We just have one representation for a word, but words have different aspects, including semantics, syntactic behavior, and register/connotations
+
+ 
+
+\end{itemize}
+\end{scriptsize}
+\end{frame}
+
+
+
+
 \begin{frame}{ELMo: Embeddings from Language Models}
 \begin{scriptsize}
 \begin{itemize}
