--- a/slides/NLP-LLM.tex
+++ b/slides/NLP-LLM.tex
@@ -480,6 +480,66 @@ Dr. Jorge Pérez, an evolutionary biologist from the University of La Paz, and s
 \end{scriptsize}
 \end{frame}
 
+
+\begin{frame}{Phase Change: GPT-3 (2020)}
+\begin{scriptsize}
+\begin{itemize}
+\item GPT-3 is another Transformer-based Language Model (LM) that pushed the boundaries with nearly 200 billion parameters, making it the largest model at the time \cite{brown2020language}.
+\item It was trained on a massive corpus consisting of nearly 500 billion words.
+\item \textbf{In-context learning}: GPT-3 demonstrated the ability to solve various natural language processing (NLP) tasks using \textbf{zero-shot}, \textbf{one-shot} and \textbf{few-shot learning}.
+\item The key to this capability lies in the prompt or context provided to GPT-3.
+\item GPT-3 demonstrated the ability to solve various tasks without performing gradient updates to the base model.
+\end{itemize}
+\end{scriptsize}
+
+ \begin{figure}[h]
+        	\includegraphics[scale = 0.08]{pics/gpt3.png}
+        \end{figure}  
+
+
+
+\end{frame}
+
+\begin{frame}{Zero-shot, One-shot, and Few-shot Learning with GPT-3}
+\begin{scriptsize}
+\begin{itemize}
+\item GPT-3 showcased remarkable capabilities in NLP tasks through different learning paradigms: zero-shot, one-shot, and few-shot learning.
+\item \textbf{Zero-shot learning}: With zero-shot learning, GPT-3 can tackle tasks it has never seen before without any specific training. It achieves this by providing a prompt or instruction to guide its generation process. For example, by providing GPT-3 with a prompt like, "Translate this English sentence to French," it can generate the translated sentence without any explicit training for translation tasks.
+\item \textbf{One-shot learning}: In one-shot learning, GPT-3 can perform a task by adding a single input-output pair to the instruction.
+\item \textbf{Few-shot learning}: providing a limited number input-outpur pairs after the instruction in the prompt.
+\end{itemize}
+\end{scriptsize}
+\end{frame}
+
+
+
+\begin{frame}{Zero-shot, One-shot, and Few-shot Learning with GPT-3}
+
+
+ \begin{figure}[h]
+        	\includegraphics[scale = 0.18]{pics/zeroonefew.png}
+        \end{figure}  
+
+
+
+\end{frame}
+
+
+
+
+\begin{frame}{Prompt Engineering}
+
+
+ \begin{figure}[h]
+        	\includegraphics[scale = 0.35]{pics/prompting.png}
+        \end{figure}  
+
+
+
+
+\end{frame}
+
+
 \begin{frame}
 \frametitle{Questions?}
 %\vspace{1.5cm}
