--- a/slides/NLP-LLM.tex
+++ b/slides/NLP-LLM.tex
@@ -577,17 +577,131 @@ soning behavior in large language models.
 \end{frame}
 
 
-\begin{frame}{Prompt Engineering}
+
+
+
+\begin{frame}{Language Models as User Assitants}
+
+\begin{scriptsize}
+\begin{itemize}
+\item Autoregressive Large Language Models are not aligned with user intent \cite{ouyang2022training}
 
 
  \begin{figure}[h]
-        	\includegraphics[scale = 0.35]{pics/prompting.png}
-        \end{figure}  
+        	\includegraphics[scale = 0.18]{pics/lmnotuserassistant.png}
+        \end{figure}
+
+\item Solution: align the language model with user intent via fine-tuning.
+
+\end{itemize}
+\end{scriptsize}
+
 
 
 
 
 \end{frame}
+
+
+\begin{frame}{LaMDA: Language Models for Dialog Applications}
+
+\begin{scriptsize}
+\begin{itemize}
+\item Autoregressive Large Language Models are not aligned with user intent \cite{ouyang2022training}
+
+
+ \begin{figure}[h]
+        	\includegraphics[scale = 0.18]{pics/lmnotuserassistant.png}
+        \end{figure}
+
+\item Solution: align the language model with user intent via fine-tuning.
+
+\end{itemize}
+\end{scriptsize}
+
+
+
+\end{frame}
+
+
+\begin{frame}{ChatGPT and RLHF}
+
+\begin{scriptsize}
+\begin{itemize}
+\item Autoregressive Large Language Models are not aligned with user intent \cite{ouyang2022training}
+
+
+ \begin{figure}[h]
+        	\includegraphics[scale = 0.18]{pics/lmnotuserassistant.png}
+        \end{figure}
+
+\item Solution: align the language model with user intent via fine-tuning.
+
+\end{itemize}
+\end{scriptsize}
+
+
+
+\end{frame}
+
+
+\begin{frame}{GPT-4}
+
+\begin{scriptsize}
+\begin{itemize}
+\item Hallucination
+\item Fairness
+\end{itemize}
+\end{scriptsize}
+
+
+
+\end{frame}
+
+
+\begin{frame}{Dangers of Large Language Models}
+
+\begin{scriptsize}
+\begin{itemize}
+\item Hallucination
+\item Fairness
+\end{itemize}
+\end{scriptsize}
+
+
+
+\end{frame}
+
+
+\begin{frame}{Prompt Engineering}
+
+
+ \begin{figure}[h]
+        	\includegraphics[scale = 0.35]{pics/prompting.png}
+        \end{figure}
+
+
+
+
+\end{frame}
+
+
+\begin{frame}{Conclusions}
+
+\begin{scriptsize}
+\begin{itemize}
+\item The growth in the size and power of language models has accelerated dramatically.
+\item It is very difficult to predict what they will do in the future.
+\item What can we predict with confidence?
+\item There will be an overload of generative models for multiple formats (text, code, image, video, virtual realities).
+\item There will be a plethora of agents/programs that act and make decisions by interacting with these models (medical appointments, investments, travel).
+\end{itemize}
+\end{scriptsize}
+
+
+
+\end{frame}
+
 
 
 \begin{frame}
