--- a/slides/NLP-LLM.tex
+++ b/slides/NLP-LLM.tex
@@ -773,11 +773,16 @@ The research community has raised concerns about several dangers associated with
 \end{frame}
 
 
+
+
 \begin{frame}{Prompt Engineering}
-
-
+\begin{scriptsize}
+\begin{itemize}
+\item Prompt engineering is a new discipline for developing and optimizing prompts to efficiently use language models (LMs).
+\end{itemize}
+\end{scriptsize}
  \begin{figure}[h]
-        	\includegraphics[scale = 0.35]{pics/prompting.png}
+        	\includegraphics[scale = 0.33]{pics/prompting.png}
         \end{figure}
 
 
