--- a/slides/NLP-LLM.tex
+++ b/slides/NLP-LLM.tex
@@ -775,6 +775,23 @@ The research community has raised concerns about several dangers associated with
 
 
 
+\begin{frame}{Large Language Models Time-line}
+\begin{scriptsize}
+\begin{itemize}
+\item As of today (2023), the development of new Large Language Models continues uninterrupted.
+ \begin{figure}[h]
+        	\includegraphics[scale = 0.33]{pics/llmtimeline.png}
+        \end{figure}
+\item A timeline of existing large language models (having a size larger than 10B) in recent years \cite{zhao2023survey}.
+\end{itemize}
+\end{scriptsize}
+
+
+
+
+\end{frame}
+
+
 \begin{frame}{Prompt Engineering}
 \begin{scriptsize}
 \begin{itemize}
