--- a/slides/NLP-LLM.tex
+++ b/slides/NLP-LLM.tex
@@ -677,7 +677,7 @@ soning behavior in large language models.
 \begin{column}{0.5\textwidth}
 \begin{scriptsize}
 \begin{itemize}
-\item Model similar to Lambda launched by OpenAI at the end of 2022.
+\item Model similar to LaMDA launched by OpenAI at the end of 2022.
 \item It also uses Crowdsourcing to improve its responses, but its fine-tuning process uses Reinforcement Learning (RL), a different learning paradigm from supervised learning.
 \item In particular, it uses Reinforcement Learning from Human Feedback (RLHF) \cite{ouyang2022training}.
 \item It builds a preference model that assigns a score to a generated sentence and adjusts the language model accordingly.
