--- a/slides/NLP-LLM.tex
+++ b/slides/NLP-LLM.tex
@@ -557,7 +557,7 @@ Dr. Jorge Pérez, an evolutionary biologist from the University of La Paz, and s
 \end{frame}
 
 
-\begin{frame}{Chain-of-thought prompting}
+\begin{frame}{Chain-of-thought Prompting}
 
 \begin{scriptsize}
 \begin{itemize}
@@ -735,7 +735,7 @@ soning behavior in large language models.
 \end{frame}
 
 
-\begin{frame}{Instruction finetuning}
+\begin{frame}{Instruction Fine-tuning}
 
 \begin{scriptsize}
 \begin{itemize}
